write cache with replication

--- a/config.ini
+++ b/config.ini
@@ -6,6 +6,9 @@ cache capacity = 20
 cache policy = LRU
 compute nodes = 4
 cpu = 5
+replication type = rep
+replication count = 3
+chunk size = 4
 
 [Network]
 nic count = 3
