LORE policy + new schedular + directory + cache structure

--- a/config.ini
+++ b/config.ini
@@ -1,14 +1,27 @@
 [Simulation]
-cache nodes = 4
+cache nodes = 2
 placement = directory
 2placement = consistent
-cache capacity = 1000 
-cache policy = LRU
-compute nodes = 4
-cpu = 5
+cache capacity = 16 
+#cache policy = LRU
+cache policy = LORE
+#compute nodes = cache nodes
+compute nodes = 2
+#cpu is the number of processing nodes
+cpu = 2
 replication type = rep
 replication count = 3
 chunk size = 4
+aging interval = 0.0000001
+end = 0.0000075
+
+[Directory]
+#size = cache_node * cache_capacity
+size = 32
+cleanup interval = 0.0000001
+#threshold = 0.9 * size
+threshold = 27
+lru count = 3
 
 [Network]
 nic count = 3
