using apply function to make it faster

--- a/config.ini
+++ b/config.ini
@@ -1,27 +1,27 @@
 [Simulation]
-cache nodes = 2
+cache nodes = 4
 placement = directory
 2placement = consistent
-cache capacity = 16 
+cache capacity = 500 
 #cache policy = LRU
 cache policy = LORE
 #compute nodes = cache nodes
-compute nodes = 2
+compute nodes = 4
 #cpu is the number of processing nodes
-cpu = 2
+cpu = 8
 replication type = rep
 replication count = 3
 chunk size = 4
 aging interval = 0.0000001
-end = 0.0000075
+end = 0.0001
 
 [Directory]
 #size = cache_node * cache_capacity
-size = 32
+size = 2000
 cleanup interval = 0.0000001
 #threshold = 0.9 * size
-threshold = 27
-lru count = 3
+threshold = 1900
+lru count = 30
 
 [Network]
 nic count = 3
