--- a/config.ini
+++ b/config.ini
@@ -2,7 +2,7 @@
 cache nodes = 4
 placement = directory
 2placement = consistent
-cache capacity = 500 
+cache capacity = 12000 
 #cache policy = LRU
 cache policy = LORE
 #compute nodes = cache nodes
@@ -12,16 +12,25 @@ cpu = 8
 replication type = rep
 replication count = 3
 chunk size = 4
-aging interval = 0.0000001
-end = 0.0001
+aging interval = 0.000001
+end = 0.01
+#trace file for each cache: should be equal to cache nodes
+#traceFile0 = trace0
+#traceFile1 = trace1
+#traceFile2 = trace2
+#traceFile3 = trace3
+traceFile0 = 100.txt
+traceFile1 = 100.txt_1
+traceFile2 = 100.txt_2
+traceFile3 = 100.txt_3
 
 [Directory]
 #size = cache_node * cache_capacity
-size = 2000
-cleanup interval = 0.0000001
+size = 6000
+cleanup interval = 0.000001
 #threshold = 0.9 * size
-threshold = 1900
-lru count = 30
+threshold = 5900
+lru count = 100
 
 [Network]
 nic count = 3
