--- a/config.ini
+++ b/config.ini
@@ -1,35 +1,36 @@
 [Simulation]
-cache nodes = 4
+cache nodes = 2
 placement = directory
 2placement = consistent
-cache capacity = 12000 
+cache capacity = 8
 #cache policy = LRU
 cache policy = LORE
+#cache policy = LFUL
 #compute nodes = cache nodes
-compute nodes = 4
+compute nodes = 2
 #cpu is the number of processing nodes
-cpu = 8
+cpu = 1
 replication type = rep
 replication count = 3
 chunk size = 4
 aging interval = 0.000001
-end = 0.01
+end = 0.00001
 #trace file for each cache: should be equal to cache nodes
-#traceFile0 = trace0
-#traceFile1 = trace1
+traceFile0 = trace0
+traceFile1 = trace1
 #traceFile2 = trace2
 #traceFile3 = trace3
-traceFile0 = 100.txt
-traceFile1 = 100.txt_1
-traceFile2 = 100.txt_2
-traceFile3 = 100.txt_3
+#traceFile0 = 100.txt
+#traceFile1 = 100.txt_1
+#traceFile2 = 100.txt_2
+#traceFile3 = 100.txt_3
 
 [Directory]
 #size = cache_node * cache_capacity
-size = 6000
-cleanup interval = 0.000001
+size = 100000
+cleanup interval = 0.00001
 #threshold = 0.9 * size
-threshold = 5900
+threshold = 99900
 lru count = 100
 
 [Network]
