changed to one thread for each cache. I also updated the aging function to run whnever a cache is half full.

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [Simulation]
-cache nodes = 2
+cache nodes = 4
 placement = directory
 2placement = consistent
 cache capacity = 8
@@ -7,23 +7,29 @@ cache capacity = 8
 cache policy = LORE
 #cache policy = LFUL
 #compute nodes = cache nodes
-compute nodes = 2
+compute nodes = 4
 #cpu is the number of processing nodes
 cpu = 1
 replication type = rep
 replication count = 3
-chunk size = 4
+chunk size = 1
+mapper size = 1
 aging interval = 0.000001
-end = 0.00001
+end = 1
 #trace file for each cache: should be equal to cache nodes
-traceFile0 = trace0
-traceFile1 = trace1
-#traceFile2 = trace2
-#traceFile3 = trace3
+#traceFile0 = MBrack0.csv
+#traceFile1 = MBrack1.csv
+#traceFile2 = MBrack2.csv
+#traceFile3 = MBrack3.csv
 #traceFile0 = 100.txt
 #traceFile1 = 100.txt_1
 #traceFile2 = 100.txt_2
 #traceFile3 = 100.txt_3
+
+traceFile0 = trace0 
+traceFile1 = trace1 
+traceFile2 = trace2
+traceFile3 = trace3
 
 [Directory]
 #size = cache_node * cache_capacity
