--- a/config.ini
+++ b/config.ini
@@ -1,13 +1,13 @@
 [Simulation]
-cache nodes = 1
+cache nodes = 4
 placement = directory
 2placement = consistent
-cache capacity = 3000
+cache capacity = 36864
 cache policy = LRU
 #cache policy = LORE
 #cache policy = LFUL
 #compute nodes = cache nodes
-compute nodes = 1
+compute nodes = 4
 #cpu is the number of processing nodes
 cpu = 1
 replication type = rep
@@ -17,11 +17,10 @@ mapper size = 128
 aging interval = 0.000001
 end = 1
 #trace file for each cache: should be equal to cache nodes
-traceFile0 = trace003GET.csv
-#traceFile0 = /home/centos/IBMTraces/trace000GET.csv
-traceFile1 = /home/centos/IBMTraces/trace001GET.csv
-traceFile2 = /home/centos/IBMTraces/trace002GET.csv
-traceFile3 = /home/centos/IBMTraces/trace003GET.csv
+traceFile0 = trace00
+traceFile1 = trace01
+traceFile2 = trace02
+traceFile3 = trace03
 #traceFile0 = 100.txt
 #traceFile1 = 100.txt_1
 #traceFile2 = 100.txt_2
@@ -34,11 +33,11 @@ traceFile3 = /home/centos/IBMTraces/trace003GET.csv
 
 [Directory]
 #size = cache_node * cache_capacity
-size = 1000000
+size = 200000000
 cleanup interval = 0.00001
 #threshold = 0.9 * size
-threshold = 999000
-lru count = 100
+threshold = 199999000
+lru count = 1000
 
 [Network]
 nic count = 3
