with network, without 4MB chunks, and with mapper size of 128MB. this version can take simulate data with different sizes without padding them to a bigger size (e.g., 4MB)

--- a/config.ini
+++ b/config.ini
@@ -1,13 +1,36 @@
 [Simulation]
-cache nodes = 4
+log file = log.txt
+cache nodes = 5
+compute nodes = 5
 placement = directory
 2placement = consistent
-cache capacity = 36864
-cache policy = LRU
-#cache policy = LORE
+#cache capacity = 300
+
+#trace00
+cache capacity = 6144
+#cache capacity = 12288
+#cache capacity = 24576
+#cache capacity = 30720
+
+#trace55
+#cache capacity = 104500
+#cache capacity = 209000
+#cache capacity = 417997
+#cache capacity = 522496
+
+#trace96
+#cache capacity = 428749 
+#cache capacity = 857498 
+#cache capacity = 1714996
+#cache capacity = 2143745
+
+#cache policy = LRU
+#cache policy = LRUD
 #cache policy = LFUL
+#cache policy = LORE
+#cache policy = LFUD
+cache policy = LFUDA
 #compute nodes = cache nodes
-compute nodes = 4
 #cpu is the number of processing nodes
 cpu = 1
 replication type = rep
@@ -16,19 +39,29 @@ chunk size = 1
 mapper size = 128
 aging interval = 0.000001
 end = 1
-#trace file for each cache: should be equal to cache nodes
+
+#TRACE FILE for each cache: should be equal to cache nodes
+
 traceFile0 = trace00
 traceFile1 = trace01
 traceFile2 = trace02
 traceFile3 = trace03
-#traceFile0 = 100.txt
-#traceFile1 = 100.txt_1
-#traceFile2 = 100.txt_2
-#traceFile3 = 100.txt_3
 
-#traceFile0 = trace0 
+#traceFile0 = trace550
+#traceFile1 = trace551
+#traceFile2 = trace552
+#traceFile3 = trace553
+
+#traceFile0 = trace960
+#traceFile1 = trace961
+#traceFile2 = trace962
+#traceFile3 = trace963
+
+traceFile4 = dummy
+
+#traceFile0 = trace0
 #traceFile1 = trace1 
-#traceFile2 = trace2
+#traceFile2 = dummy
 #traceFile3 = trace3
 
 [Directory]
@@ -41,9 +74,23 @@ lru count = 1000
 
 [Network]
 nic count = 3
-nic0 in = 2Gbps
-nic0 out = 2Gbps
-nic1 in = 2Gbps
-nic1 out = 2Gbps
-nic2 in = 2Gbps
-nic2 out = 2Gbps
+unit = Gbps
+nic0 in = 40
+nic0 out = 40
+nic1 in = 40
+nic1 out = 40
+nic2 in = 40
+nic2 out = 40
+dl nic0 in = 10
+dl nic0 out = 10
+dl nic1 in = 10
+dl nic1 out = 10
+dl nic2 in = 10
+dl nic2 out = 10
+
+#nic0 in = 2Gbps
+#nic0 out = 2Gbps
+#nic1 in = 2Gbps
+#nic1 out = 2Gbps
+#nic2 in = 2Gbps
+#nic2 out = 2Gbps
